objects/Hours__c.object
<CustomObject>
    <description>Volunteering hours earned by Challengers</description>
    <fields>
        <fullName>Challenger__c</fullName>
        <description>Link to the Challenger the hours relate to</description>
        <inlineHelpText>Theyoung person the hours relate to</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist. Please check the spelling is correct.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>YP2014, Young Person</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hours</relationshipLabel>
        <relationshipName>Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_email__c</fullName>
        <description>Email address of volunteering contact</description>
        <inlineHelpText>Email address of volunteering contact</inlineHelpText>
        <label>Contact email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_name__c</fullName>
        <description>Name of volunteering contact</description>
        <inlineHelpText>Name of volunteering contact</inlineHelpText>
        <label>Contact name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_telephone_number__c</fullName>
        <description>Telephone number of volunteering contact</description>
        <inlineHelpText>Telephone number of volunteering contact</inlineHelpText>
        <label>Contact telephone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_hours_submitted__c</fullName>
        <description>Date on which the Young Person submitted their hours</description>
        <inlineHelpText>Date on which the Young Personsubmitted their hours</inlineHelpText>
        <label>Date hours submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Volunteering__c</fullName>
        <label>Date of Volunteering</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_Number__c</fullName>
        <formula>HYPERLINK(&apos;TCSPortal_HourDetail?id=&apos;+Id, Name,&apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>Number of volunteering hours</description>
        <inlineHelpText>Number of volunteering hours</inlineHelpText>
        <label>LH Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of_volunteering__c</fullName>
        <description>Picklist for YP to select the hours they spent volunteering</description>
        <inlineHelpText>Picklist for YP to select the hours they spent volunteering</inlineHelpText>
        <label>Hours of volunteering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_sign_up_date__c</fullName>
        <description>Date young person initially signed up for the volunteering opportunity</description>
        <inlineHelpText>Date young person initially signed up for the volunteering opportunity</inlineHelpText>
        <label>Initial sign-up date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Shown__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Shown</label>
        <referenceTo>Interest_Shown__c</referenceTo>
        <relationshipLabel>Hours</relationshipLabel>
        <relationshipName>Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organisation_volunteering_with__c</fullName>
        <description>Name of organisation, pulled through from Volunteering Opportunity</description>
        <formula>Volunteering_Opportunity__r.Organisation__r.Name</formula>
        <inlineHelpText>Name of organisation the volunteering opportunity is with</inlineHelpText>
        <label>Organisation volunteering with</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_organisation_volunteering_with__c</fullName>
        <description>Name of organisation Challenger is volunteering with, if this cannot be looked up</description>
        <inlineHelpText>Name of organisation Challenger is volunteering with, if this cannot be looked up</inlineHelpText>
        <label>Other organisation volunteering with</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_Vol_Borough__c</fullName>
        <formula>text(Interest_Shown__r.Own_Vol_Borough__c)</formula>
        <label>Own Vol - Borough</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_Vol_Contact_details__c</fullName>
        <formula>Interest_Shown__r.Own_Vol_Contact_details__c</formula>
        <label>Own Vol - Contact details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_Vol_Email__c</fullName>
        <formula>Interest_Shown__r.Own_Vol_Email__c</formula>
        <label>Own Vol - Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_Vol_Manager_s_name__c</fullName>
        <formula>Interest_Shown__r.Own_Vol_Manager_s_name__c</formula>
        <label>Own Vol - Manager&apos;s name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_Vol_Number__c</fullName>
        <formula>Interest_Shown__r.Own_Vol_Number__c</formula>
        <label>Own Vol - Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_Vol_Organisation_name__c</fullName>
        <formula>Interest_Shown__r.Own_Vol_Organisation_name__c</formula>
        <label>Own Vol - Organisation name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_opportunity__c</fullName>
        <formula>Interest_Shown__r.Own_opportunity__c</formula>
        <label>Own opportunity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_as_number__c</fullName>
        <formula>CASE( Rating__c , &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, NULL)</formula>
        <label>Rating as number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signposting_Opportunity_Removed__c</fullName>
        <formula>Interest_Shown__r.Signposting_Opportunity_Removed__c</formula>
        <label>Signposting Opportunity Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signposting_Opportunity_Unpublished__c</fullName>
        <formula>Interest_Shown__r.Signposting_Opportunity_Unpublished__c</formula>
        <label>Signposting Opportunity Unpublished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travelled_for_over_30_minutes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by the YP when they travelled for more than 30 minutes to reach the volunteering opportunity</description>
        <inlineHelpText>Box checked by the YP when they travelled for more than 30 minutes to reach the volunteering opportunity</inlineHelpText>
        <label>Travelled for over 30 minutes?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_notes__c</fullName>
        <description>Any notes you wish to make about why you verified these hours</description>
        <inlineHelpText>Any notes you wish to make about why you verified these hours</inlineHelpText>
        <label>Verification notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please tick if you agree with the volunteering hours</description>
        <inlineHelpText>Please tick if you agree with the volunteering hours</inlineHelpText>
        <label>Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteering_Opportunity__c</fullName>
        <description>Opportunity to which the hours relate</description>
        <inlineHelpText>Opportunity to which the hours relate</inlineHelpText>
        <label>Signposting Opportunity</label>
        <referenceTo>Volunteering_Opportunity__c</referenceTo>
        <relationshipLabel>Challenger Hours</relationshipLabel>
        <relationshipName>Hours</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Volunteering_description__c</fullName>
        <description>A description of the activities the YP took part in during the day.</description>
        <inlineHelpText>A description of the activities the YP took part in during the day.</inlineHelpText>
        <label>Volunteering description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Hours</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteering_Opportunity__c</field>
            <operation>contains</operation>
            <value>HeadStart</value>
        </filters>
        <label>All2</label>
    </listViews>
    <nameField>
        <displayFormat>H#{00000000}</displayFormat>
        <label>Hours Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>